BN-114 | Fix Column Gap For Search Button

--- a/packages/bahmni-widgets/src/searchPatient/styles/SearchPatient.module.scss
+++ b/packages/bahmni-widgets/src/searchPatient/styles/SearchPatient.module.scss
@@ -14,7 +14,7 @@
 .searchPatient {
   display: flex;
   justify-content: space-between;
-  column-gap: 0.75rem;
+  column-gap: 1.5rem;
   align-items: center;
 }
 
